<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_event_details_">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".SecondFragment">

        // ==== Form Fields ==== //

        <TextView
            android:id="@+id/labelEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="?android:attr/colorForeground"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/eventDetailsName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"></EditText>


        <TextView
            android:id="@+id/labelLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/event_location"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="?android:attr/colorForeground"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/eventDetailsLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"></EditText>

        <TextView
            android:id="@+id/labelEventDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/event_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="?android:attr/colorForeground"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/eventDetailsDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textMultiLine"></EditText>

        <TextView
            android:id="@+id/labelEventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_date_only" />

        <EditText
            android:id="@+id/eventDetailsDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textMultiLine"></EditText>

        // ==== Action Fields ==== //


    </LinearLayout>
</FrameLayout>